<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CreerEnseigneActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="373dp"
        android:layout_height="117dp"
        android:contentDescription="Logo Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/TitleEnseigne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:letterSpacing="0.05"
        android:text="@string/créer_enseigne"
        android:textColor="@color/colorWhite"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_below="@id/TitleEnseigne"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/enregistrer_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleEnseigne"
        app:layout_constraintVertical_bias="0.584" />


    <EditText
        android:id="@+id/editNomEnseigne"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/input_bg"
        android:drawableTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/nom_enseigne"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleEnseigne" />

    <EditText
        android:id="@+id/editAdresseEnseigne"
        android:layout_width="320dp"
        android:layout_height="33dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:drawableTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/adresse"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomEnseigne" />

    <EditText
        android:id="@+id/editCodePostalEnseigne"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:drawableTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/code_postal"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAdresseEnseigne" />

    <EditText
        android:id="@+id/editVilleEnseigne"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:drawableTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/ville"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toEndOf="@+id/editCodePostalEnseigne"
        app:layout_constraintTop_toBottomOf="@+id/editAdresseEnseigne" />

    <EditText
        android:id="@+id/editContactEnseigne"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/constact_enseigne"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="@+id/editTelephoneEnseigne"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCodePostalEnseigne" />

    <EditText
        android:id="@+id/editTelephoneEnseigne"
        android:layout_width="172dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bg"
        android:drawableTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editVilleEnseigne" />

    <EditText
        android:id="@+id/editMailContactEnseigne"
        android:layout_width="320dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:drawableTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/email_contact"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContactEnseigne" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_below="@id/TitleEnseigne"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/accueil_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleEnseigne"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>