<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/border_white">

    <TableRow android:layout_marginBottom="7sp"
        android:paddingBottom="2sp">
        <TextView
            android:id="@+id/HeadNomClientTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:gravity="center"
            android:text="@string/nom_client"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/HeadDateMetrageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:gravity="center"

            android:text="@string/date_metrage"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/HeadActionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:gravity="center"
            android:text="@string/action"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white" />

    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/nomClientTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="Nom Client"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/dateMetrageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="Date Metrage"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_awesome"
            android:textSize="30dp"
            android:text="\uf044"
            android:layout_marginRight="5dp"

            android:textColor="@color/orange"/>

        <TextView
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_awesome"
            android:textSize="30dp"
            android:text="\uf2ed"
            android:layout_marginRight="5dp"
            android:textColor="@color/orange"/>

        <TextView
            android:id="@+id/eyeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_awesome"
            android:textSize="30dp"
            android:text="\uf06e"
            android:textColor="@color/orange"
            />

    </TableRow>

</TableLayout>