<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ListeMetrageActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="373dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:letterSpacing="0.05"
        android:text="Liste des métrages"
        android:textColor="@color/colorWhite"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TableLayout
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:background="@drawable/table_head_white"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0">

        <TableRow android:layout_height="33dp">

            <TextView
                android:id="@+id/HeadNomClientTextView"
                android:layout_width="91dp"
                android:layout_height="48dp"
                android:layout_weight="0.46"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/nom_client"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/HeadDateMetrageTextView"
                android:layout_width="91dp"
                android:layout_height="48dp"
                android:layout_weight="0.46"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/date_ajout"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <TextView
                android:id="@+id/HeadActionTextView"
                android:layout_width="70dp"
                android:layout_height="48dp"
                android:layout_weight="0.49"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/action"
                android:textColor="@color/white" />


        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="327dp"
        android:layout_height="366dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="327dp"
            android:layout_height="370dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </ScrollView>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/orange"
        android:text="@string/accueil_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.875" />

</androidx.constraintlayout.widget.ConstraintLayout>